--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   carousel_slider: ^4.0.0
   get: ^4.3.8
   screenshot: ^1.2.3
+  image_gallery_saver: ^1.6.9
+  permission_handler: ^8.1.1
   
 
 dev_dependencies:
