--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,12 @@ dependencies:
   screenshot: ^1.2.3
   image_gallery_saver: ^1.6.9
   permission_handler: ^8.1.1
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "images/flunyicon.png"
   
 
 dev_dependencies:
